[#176091543] Add PagoPaGetUser func
