# PagoPAGetUser/index.ts
@@ -3,29 +3,30 @@ import * as winston from "winston";
 
 import { Context } from "@azure/functions";
 import {
-  SERVICE_COLLECTION_NAME,
-  ServiceModel
-} from "io-functions-commons/dist/src/models/service";
+  PROFILE_COLLECTION_NAME,
+  ProfileModel
+} from "io-functions-commons/dist/src/models/profile";
 import { secureExpressApp } from "io-functions-commons/dist/src/utils/express";
 import { AzureContextTransport } from "io-functions-commons/dist/src/utils/logging";
 import { setAppContext } from "io-functions-commons/dist/src/utils/middlewares/context_middleware";
 import createAzureFunctionHandler from "io-functions-express/dist/src/createAzureFunctionsHandler";
 
+import * as passport from "passport";
 import { getConfigOrThrow } from "../utils/config";
 import { cosmosdbClient } from "../utils/cosmosdb";
-import { HttpCtrl } from "./handler";
+import {
+  createClusterRedisClient,
+  createSimpleRedisClient
+} from "../utils/redis";
+import SessionStorage from "../utils/sessionStorage";
+import bearerWalletTokenStrategy from "../utils/strategy";
+import { PagoPaGetUser } from "./handler";
 
 //
 //  CosmosDB initialization
 //
 
 const config = getConfigOrThrow();
-
-const servicesContainer = cosmosdbClient
-  .database(config.COSMOSDB_NAME)
-  .container(SERVICE_COLLECTION_NAME);
-
-const serviceModel = new ServiceModel(servicesContainer);
 
 // tslint:disable-next-line: no-let
 let logger: Context["log"] | undefined;
@@ -34,12 +35,36 @@ const contextTransport = new AzureContextTransport(() => logger, {
 });
 winston.add(contextTransport);
 
+const REDIS_CLIENT = !config.isProduction
+  ? createSimpleRedisClient(config.REDIS_URL)
+  : createClusterRedisClient(
+      config.REDIS_URL,
+      config.REDIS_PASSWORD,
+      config.REDIS_PORT
+    );
+const sessionStorage = new SessionStorage(REDIS_CLIENT);
+
+const profileModel = new ProfileModel(
+  cosmosdbClient
+    .database(config.COSMOSDB_NAME)
+    .container(PROFILE_COLLECTION_NAME)
+);
+
 // Setup Express
 const app = express();
 secureExpressApp(app);
 
+passport.use("bearer.wallet", bearerWalletTokenStrategy(sessionStorage));
+const walletBearerAuth = passport.authenticate("bearer.wallet", {
+  session: false
+});
+
 // Add express route
-app.get("/some/path/:someParam", HttpCtrl(serviceModel));
+app.get(
+  "/api/v1/user",
+  walletBearerAuth,
+  PagoPaGetUser(profileModel, sessionStorage, config.ENABLE_NOTICE_EMAIL_CACHE)
+);
 
 const azureFunctionHandler = createAzureFunctionHandler(app);
 
